--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "axios": "^0.18.0",
+    "element-ui": "^2.4.11",
+    "vue": "^2.5.2",
+    "vue-store": "^0.3.1-moved"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
