--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.18.0",
     "element-ui": "^2.4.11",
     "vue": "^2.5.2",
-    "vue-store": "^0.3.1-moved"
+    "vue-store": "^0.3.1-moved",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
